--- a/package.json
+++ b/package.json
@@ -14,3 +14,13 @@
     "openai": "^4.104.0"
   }
 }
+
+{
+  "total": 120,
+  "daily": {
+    "2025-10-27": 15,
+    "2025-10-28": 20,
+    "2025-10-29": 25,
+    "2025-10-30": 60
+  }
+}
