--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "nodemailer": "^7.0.10",
     "openai": "^4.104.0"
   }
 }
-
